init realio landing page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="DExtr Document Data Extractor is a new progressive tool for automated data extraction of valuable data from various document classes: invoices, bills, contracts, payslips ...">
-    <meta name="author" content="Peter Rybar, pr.rybar@mialcom">
+    <meta name="description" content="RealIO - reality 2.0">
+    <meta name="author" content="Peter Rybar, pr.rybar@gmailcom">
 
-    <title>DExtr - document data extractor</title>
+    <title>RealIO - reality 2.0</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/landing-page.css" rel="stylesheet">
@@ -38,7 +38,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">DExtr - Data Extractor</a>
+                <a class="navbar-brand" href="#">RealIO - reality 2.0</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -63,12 +63,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>DExtr</h1>
-                        <h2>Intelligent Document Data Extractor</h2>
+                        <h1>RealIO</h1>
+                        <h2>Reality 2.0</h2>
                         <hr class="intro-divider">
                         <h3>
-                            DExtr - Data Extractor is a new progressive tool for automated data extraction of valuable data from various document classes:
-                            invoices, bills, contracts, payslips ...
+                            RealIO - reality 2.0 ...
 
                         </h3>
                     </div>
@@ -117,15 +116,15 @@
                 <div class="content arrow-square container-fluid" id="work-panel">
                     <div class="row" id="work">
                         <div class="col-md-12 work-steps">
-                            <div class="work-step tooltip-bottom" data-tooltip="DExtr can handle both text documents and images">
+                            <div class="work-step tooltip-bottom" data-tooltip="RealIO can handle both text documents and images">
                                 <h4 class="work-title text-center top">Load your documents</h4>
                                 <div class="work-order bottom">1.</div>
                             </div>
-                            <div class="work-step tooltip-top" data-tooltip="DExtr provides set of recognizers - word, date, number, money, address and more">
+                            <div class="work-step tooltip-top" data-tooltip="RealIO provides set of recognizers - word, date, number, money, address and more">
                                 <div class="work-order top">2.</div>
                                 <h4 class="work-title text-center bottom">Data recognition</h4>
                             </div>
-                            <div class="work-step tooltip-bottom" data-tooltip="DExtr easily extracts valuable data with embedded operations - filter, merge, sort, validate and more">
+                            <div class="work-step tooltip-bottom" data-tooltip="RealIO easily extracts valuable data with embedded operations - filter, merge, sort, validate and more">
                                 <h4 class="work-title text-center top">Extract valuable data</h4>
                                 <div class="work-order bottom">3.</div>
                             </div>
@@ -141,17 +140,17 @@
                             <div class="work-step-mobile">
                                 <div class="work-order">1.</div>
                                 <h4 class="work-title text-center">Load your documents</h4>
-                                <div class="work-text text-center">DExtr can handle both text documents and images</div>
+                                <div class="work-text text-center">RealIO can handle both text documents and images</div>
                             </div>
                             <div class="work-step-mobile">
                                 <div class="work-order">2.</div>
                                 <h4 class="work-title text-center">Data recognition</h4>
-                                <div class="work-text text-center">DExtr provides set of recognizers - word, date, number, money, address and more</div>
+                                <div class="work-text text-center">RealIO provides set of recognizers - word, date, number, money, address and more</div>
                             </div>
                             <div class="work-step-mobile">
                                 <div class="work-order">3.</div>
                                 <h4 class="work-title text-center">Extract valuable data</h4>
-                                <div class="work-text text-center">DExtr easily extracts valuable data with embedded operations - filter, merge, sort, validate
+                                <div class="work-text text-center">RealIO easily extracts valuable data with embedded operations - filter, merge, sort, validate
                                     and more</div>
                             </div>
                             <div class="work-step-mobile">
@@ -180,7 +179,7 @@
                     <p class="lead">Does your company handle a lot of documents?
                         <br>Does it involve manual labour?
                         <br>
-                        <strong>DExtr</strong> helps you improve your processes, reduce manual work and cut your costs by:
+                        <strong>RealIO</strong> helps you improve your processes, reduce manual work and cut your costs by:
                         <br>
                     </p>
                     <ul class="lead">
@@ -210,7 +209,7 @@
                     <p class="lead">Looking for new data sources?
                         <br>Searching for intelligent Data Mining Tool?
                         <br>
-                        <strong>DExtr</strong> provides set of professional tools, which allows you to:</p>
+                        <strong>RealIO</strong> provides set of professional tools, which allows you to:</p>
                     <ul class="lead">
                         <li>Reveal semantics in text documents</li>
                         <li>Provide document structure and OCR text recovery</li>
@@ -266,8 +265,8 @@
                         <div class="caption">
                             <h3>Speed</h3>
                             <p class="lead text-justify">
-                                Typical document processing is in time interval of under one second. DExtr is built on the Java 8 platform, which has the
-                                needed performance and tooling. DExtr engine uses efficiently implemented extraction strategies
+                                Typical document processing is in time interval of under one second. RealIO is built on the Java 8 platform, which has the
+                                needed performance and tooling. RealIO engine uses efficiently implemented extraction strategies
                                 to boost performance using parallel recognition.
                             </p>
                         </div>
@@ -279,7 +278,7 @@
                         <div class="caption">
                             <h3>Ease of Integration</h3>
                             <p class="lead text-justify">
-                                Web Services can be used to expose DExtr functionality to external or internal systems, as well as command line tool or DExtr
+                                Web Services can be used to expose RealIO functionality to external or internal systems, as well as command line tool or RealIO
                                 tool library for direct batch processing. This allows straightforward integration with other
                                 systems.
                             </p>
@@ -292,7 +291,7 @@
                         <div class="caption">
                             <h3>Intelligent Classification</h3>
                             <p class="lead text-justify">
-                                Classification is essential part of data extraction process to achieve better extraction results. DExtr can use machine learning
+                                Classification is essential part of data extraction process to achieve better extraction results. RealIO can use machine learning
                                 techniques to classify documents based on recognized entities.
                             </p>
                         </div>
@@ -307,7 +306,7 @@
                             <h3>Configurability</h3>
                             <p class="lead text-justify">
                                 Highly expressive domain specific API and scripting language is used to leverage the configurability of extraction and classification
-                                process. DExtr provides Document Viewer (DView) as a visual desktop application for better
+                                process. RealIO provides Document Viewer (DView) as a visual desktop application for better
                                 document visualization, extraction configuration and debugging.
                             </p>
                         </div>
@@ -331,7 +330,7 @@
                         <div class="caption">
                             <h3>Advanced Extraction</h3>
                             <p class="lead text-justify">
-                                State-of-the-art recognition algorithms detect relevant data, enabling DExtr to outperform template based solutions.
+                                State-of-the-art recognition algorithms detect relevant data, enabling RealIO to outperform template based solutions.
                             </p>
                         </div>
                     </div>
@@ -339,7 +338,7 @@
             </div>
         </div>
     </div>
-    <!--// TODO maybe via different approaches show dextr capabilities-->
+    <!--// TODO maybe via different approaches show RealIO capabilities-->
     <!--#dview.content-section-b-->
     <!--    .container-->
     <!--        .row-->
@@ -356,7 +355,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>DExtr Document Viewer
+                    <h2>RealIO Document Viewer
                         <div class="clearfix"></div>
                         <hr class="section-heading-spacer">
                     </h2>
@@ -371,8 +370,8 @@
                         <li>Entity inspection</li>
                     </ul>
                     <p class="text-justify">
-                        DView is a part of DExtr tools, used to facilitate DExtr in process of document data extraction. DExtr supports standard
-                        digital document formats, like PDF, DOC, TXT, XML, HOCR. DExtr can read the output of major OCRs,
+                        DView is a part of RealIO tools, used to facilitate RealIO in process of document data extraction. RealIO supports standard
+                        digital document formats, like PDF, DOC, TXT, XML, HOCR. RealIO can read the output of major OCRs,
                         such as ABBYY and Tesseract.
                     </p>
                     <br>
