Texts and photo change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="RealIO - reality 2.0">
     <meta name="author" content="Peter Rybar, pr.rybar@gmailcom">
 
-    <title>RealIO - reality 2.0</title>
+    <title>RealIO - Real Estate auction blockchain</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/landing-page.css" rel="stylesheet">
@@ -38,7 +38,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">RealIO - reality 2.0</a>
+                <a class="navbar-brand" href="#">RealIO - Real Estate auction blockchain</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -49,7 +49,7 @@
                         <a href="#features">Features</a>
                     </li>
                     <li>
-                        <a href="#dview">Try Document Viewer</a>
+                        <a href="#dview">Whitepaper</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -64,10 +64,10 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>RealIO</h1>
-                        <h2>Reality 2.0</h2>
+                        <h2>Real Estate auction blockchain</h2>
                         <hr class="intro-divider">
                         <h3>
-                            RealIO - reality 2.0 ...
+                            
 
                         </h3>
                     </div>
@@ -81,22 +81,22 @@
                 <div class="col-xs-12 col-sm-4 col-lg-pull-1 text-right center">
                     <h2>INTELLIGENT</h2>
                     <ul class="list-unstyled lead">
-                        <li>Intelligent document classification</li>
-                        <li>Intelligent data recognition</li>
-                        <li>Intelligent data extractors</li>
-                        <li>Rich Document Representation & API</li>
+                        <li>Auction Smart contracts</li>
+                        <li>Real Estate Analytics</li>
+                        <li>Graphs</li>
+                        <li>Escrow</li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-4 center">
                     <img class="img-responsive center-block" src="img/dextr_logo_min.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-sm-4 col-lg-push-1 text-left center">
-                    <h2>FLEXIBLE</h2>
+                    <h2>USER FRIENDLY</h2>
                     <ul class="list-unstyled lead">
-                        <li>Flexible document layout</li>
-                        <li>Flexible extraction flow</li>
-                        <li>Flexible data output format</li>
-                        <li>Powerful toolset</li>
+                        <li>Powerful Real Estate search </li>
+                        <li>Property photo shooting</li>
+                        <li>360c and VR</li>
+                        <li>Legal help and advices</li>
                     </ul>
                 </div>
             </div>
@@ -168,7 +168,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <h2 class="section-heading">Automate your document processes
+                    <h2 class="section-heading">Realio Auction
                         <div class="clearfix"></div>
                         <hr class="section-heading-spacer">
                     </h2>
@@ -176,7 +176,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <p class="lead">Does your company handle a lot of documents?
+                    <p class="lead">Realio is an online real estate auction blockchain platform, a first blockchain web application that has auction for sellers, buyers, real estate brokers, and all those who are directly and indirectly part of the real estate economy. 
                         <br>Does it involve manual labour?
                         <br>
                         <strong>RealIO</strong> helps you improve your processes, reduce manual work and cut your costs by:
@@ -189,7 +189,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/automate_doc_process_cr.jpg" alt="">
+                    <img class="img-responsive" src="img/book-wood-hammer-musical-instrument-rule-books-738484-pxhere.com.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -198,7 +198,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
-                    <h2 class="section-heading">Load your Big Data
+                    <h2 class="section-heading">Real Estate Analytics
                         <div class="clearfix"></div>
                         <hr class="section-heading-spacer">
                     </h2>
@@ -226,7 +226,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <h2 class="section-heading">Reveal semantics in unstructured and non-semantic data
+                    <h2 class="section-heading">Powerful Real Estate search
                         <div class="clearfix"></div>
                         <hr class="section-heading-spacer">
                     </h2>
@@ -261,9 +261,9 @@
             <div class="row text-center">
                 <div class="col-md-4 hero-feature">
                     <div class="thumbnail">
-                        <img src="img/speed.jpg">
+                        <img src="img/rating_1.jpg">
                         <div class="caption">
-                            <h3>Speed</h3>
+                            <h3>Rating</h3>
                             <p class="lead text-justify">
                                 Typical document processing is in time interval of under one second. RealIO is built on the Java 8 platform, which has the
                                 needed performance and tooling. RealIO engine uses efficiently implemented extraction strategies
@@ -274,9 +274,9 @@
                 </div>
                 <div class="col-md-4 hero-feature">
                     <div class="thumbnail">
-                        <img src="img/integration.jpg">
+                        <img src="img/writing-pen-sign-business-paper-brand-941451-pxhere.com.jpg">
                         <div class="caption">
-                            <h3>Ease of Integration</h3>
+                            <h3>Legal advice</h3>
                             <p class="lead text-justify">
                                 Web Services can be used to expose RealIO functionality to external or internal systems, as well as command line tool or RealIO
                                 tool library for direct batch processing. This allows straightforward integration with other
@@ -287,9 +287,9 @@
                 </div>
                 <div class="col-md-4 hero-feature">
                     <div class="thumbnail">
-                        <img src="img/classification.jpg">
+                        <img src="img/mobile-phone-network-office-sharing-smartphone-1431203-pxhere.com.jpg">
                         <div class="caption">
-                            <h3>Intelligent Classification</h3>
+                            <h3>Documents sharing</h3>
                             <p class="lead text-justify">
                                 Classification is essential part of data extraction process to achieve better extraction results. RealIO can use machine learning
                                 techniques to classify documents based on recognized entities.
@@ -301,9 +301,9 @@
             <div class="row text-center">
                 <div class="col-md-4 hero-feature">
                     <div class="thumbnail">
-                        <img src="img/configuration.jpg">
+                        <img src="img/living-room-1491858438hnQ.jpg">
                         <div class="caption">
-                            <h3>Configurability</h3>
+                            <h3>Photo Shooting</h3>
                             <p class="lead text-justify">
                                 Highly expressive domain specific API and scripting language is used to leverage the configurability of extraction and classification
                                 process. RealIO provides Document Viewer (DView) as a visual desktop application for better
@@ -314,9 +314,9 @@
                 </div>
                 <div class="col-md-4 hero-feature">
                     <div class="thumbnail">
-                        <img src="img/representation.jpg">
+                        <img src="img/Building-Inspector.jpg">
                         <div class="caption">
-                            <h3>Rich Representation</h3>
+                            <h3>Inspection Calendar</h3>
                             <p class="lead text-justify">
                                 Textual and Visual document representation is used simultaneously to extract data, as each bit of information helps recognize
                                 important patterns.
@@ -326,9 +326,9 @@
                 </div>
                 <div class="col-md-4 hero-feature">
                     <div class="thumbnail">
-                        <img src="img/analysis.jpg">
+                        <img src="img/Interior_of_Hallwylska_360_degree_28.JPG">
                         <div class="caption">
-                            <h3>Advanced Extraction</h3>
+                            <h3>Virtual tour</h3>
                             <p class="lead text-justify">
                                 State-of-the-art recognition algorithms detect relevant data, enabling RealIO to outperform template based solutions.
                             </p>
@@ -355,7 +355,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>RealIO Document Viewer
+                    <h2>RealIO Whitepaper
                         <div class="clearfix"></div>
                         <hr class="section-heading-spacer">
                     </h2>
