--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <li>Legal help and advices</li>
                     </ul>
                 </div>
-            </div>
+            </div>3
         </div>
     </div>
     <div class="flow content-section-a">
