process flow fix

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                                 <h4 class="work-title text-center bottom">Use output</h4>
                             </div>
                             <div class="line line-top"></div>
-                            <!--.line.line-middle-->
-                            <!--.line.line-bottom-->
+                            <div class="line line-middle"></div>
+                            <div class="line line-bottom"></div>
                         </div>
                         <div class="col-md-12 work-steps-mobile">
                             <div class="work-step-mobile">
